Se agrega data.js, se exporta array de datos a main y se utiliza para cargar img. Cambios de template y estilos.

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     </button>
                   </h2>
                 </div>
-                <div id="collapseSize" class="collapse" aria-labelledby="size" data-parent="#filter">
+                <div id="collapseSize" class="collapse show" aria-labelledby="size" data-parent="#filter">
                   <div class="card-body p-1">
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item pl-4">
