--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>La Preuve</title>
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
     <!-- Styles -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
@@ -116,6 +117,10 @@
                           <ul class="list-group list-group-flush">
                             <li class="list-group-item pl-4">
                               <a href="#" class="text-dark" id="shoesSearch">Zapatillas</a>
+                              <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-check2-circle" fill="green" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L8 9.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+                                <path fill-rule="evenodd" d="M8 2.5A5.5 5.5 0 1 0 13.5 8a.5.5 0 0 1 1 0 6.5 6.5 0 1 1-3.25-5.63.5.5 0 1 1-.5.865A5.472 5.472 0 0 0 8 2.5z"/>
+                              </svg>
                             </li>
                             <li class="list-group-item pl-4">
                               <a href="#" class="text-dark">Zapatos</a>
@@ -150,6 +155,10 @@
                         <ul class="list-group list-group-flush">
                           <li class="list-group-item pl-4">
                             <a href="#" class="text-dark" id="thirtySixSearch">36</a>
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-check2-circle" fill="green" xmlns="http://www.w3.org/2000/svg">
+                              <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L8 9.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+                              <path fill-rule="evenodd" d="M8 2.5A5.5 5.5 0 1 0 13.5 8a.5.5 0 0 1 1 0 6.5 6.5 0 1 1-3.25-5.63.5.5 0 1 1-.5.865A5.472 5.472 0 0 0 8 2.5z"/>
+                            </svg>
                           </li>
                           <li class="list-group-item pl-4">
                             <a href="#" class="text-dark">38</a>
@@ -184,6 +193,10 @@
                         <ul class="list-group list-group-flush">
                           <li class="list-group-item pl-4">
                             <a href="#" class="text-dark" id="yellowSearch">Amarillo</a>
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-check2-circle" fill="green" xmlns="http://www.w3.org/2000/svg">
+                              <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L8 9.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+                              <path fill-rule="evenodd" d="M8 2.5A5.5 5.5 0 1 0 13.5 8a.5.5 0 0 1 1 0 6.5 6.5 0 1 1-3.25-5.63.5.5 0 1 1-.5.865A5.472 5.472 0 0 0 8 2.5z"/>
+                            </svg>
                           </li>
                           <li class="list-group-item pl-4">
                             <a href="#" class="text-dark">Negro</a>
@@ -231,7 +244,11 @@
                   <div class="card-body p-1">
                       <ul class="list-group list-group-flush">
                         <li class="list-group-item pl-4">
-                          <a href="#" class="text-dark" id="shoesSearch">Zapatillas</a>
+                          <a href="#" class="text-dark" id="shoesSearchD">Zapatillas</a>
+                          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-check2-circle" fill="green" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L8 9.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+                            <path fill-rule="evenodd" d="M8 2.5A5.5 5.5 0 1 0 13.5 8a.5.5 0 0 1 1 0 6.5 6.5 0 1 1-3.25-5.63.5.5 0 1 1-.5.865A5.472 5.472 0 0 0 8 2.5z"/>
+                          </svg>
                         </li>
                         <li class="list-group-item pl-4">
                           <a href="#" class="text-dark">Zapatos</a>
@@ -265,7 +282,11 @@
                   <div class="card-body p-1">
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item pl-4">
-                        <a href="#" class="text-dark" id="thirtySixSearch">36</a>
+                        <a href="#" class="text-dark" id="thirtySixSearchD">36</a>
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-check2-circle" fill="green" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L8 9.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+                          <path fill-rule="evenodd" d="M8 2.5A5.5 5.5 0 1 0 13.5 8a.5.5 0 0 1 1 0 6.5 6.5 0 1 1-3.25-5.63.5.5 0 1 1-.5.865A5.472 5.472 0 0 0 8 2.5z"/>
+                        </svg>
                       </li>
                       <li class="list-group-item pl-4">
                         <a href="#" class="text-dark">38</a>
@@ -299,7 +320,11 @@
                   <div class="card-body p-1">
                     <ul class="list-group list-group-flush">
                       <li class="list-group-item pl-4">
-                        <a href="#" class="text-dark" id="yellowSearch">Amarillo</a>
+                        <a href="#" class="text-dark" id="yellowSearchD">Amarillo</a>
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-check2-circle" fill="green" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L8 9.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+                          <path fill-rule="evenodd" d="M8 2.5A5.5 5.5 0 1 0 13.5 8a.5.5 0 0 1 1 0 6.5 6.5 0 1 1-3.25-5.63.5.5 0 1 1-.5.865A5.472 5.472 0 0 0 8 2.5z"/>
+                        </svg>
                       </li>
                       <li class="list-group-item pl-4">
                         <a href="#" class="text-dark">Negro</a>
